--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^1.30.1",
     "dropzone": "^5.5.1",
     "element-ui": "2.4.11",
+    "emailjs-com": "^3.2.0",
     "es6-promise": "^4.2.8",
     "flatpickr": "^4.5.7",
     "fuse.js": "^3.2.0",
